--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,11 +46,10 @@
     // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
 
     /* Emit */
-    "declaration": true,
-    /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    //    "declarationMap": true,
+    //    "declaration": true,/* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+    //        "declarationMap": true,
     /* Create sourcemaps for d.ts files. */
-    "emitDeclarationOnly": true,
+    //    "emitDeclarationOnly": true,
     /* Only output d.ts files and not JavaScript files. */
     "sourceMap": true,
     /* Create source map files for emitted JavaScript files. */
@@ -101,7 +100,8 @@
     // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
     // "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
     // "noUncheckedIndexedAccess": true,                 /* Add 'undefined' to a type when accessed using an index. */
-    // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
+    "noImplicitOverride": true,
+    /* Ensure overriding members in derived classes are marked with an override modifier. */
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
     // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
