--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
+    "prettier": "^2.8.3",
     "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "tslint": "^6.1.3",
+    "tslint-loader": "^3.5.4",
     "typescript": "^4.9.4",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
