--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mesto-ts",
   "version": "1.0.0",
-  "description": "[Видео. Краткий обзор](https://user-images.githubusercontent.com/94468513/163075115-f2bbe1a0-51f3-4118-b5f6-601b5370f4c2.mp4)",
-  "main": "babel.config.js",
+  "description": "",
+  "main": "_babel.config.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve",
@@ -19,6 +19,9 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.11.18",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
@@ -30,7 +33,7 @@
     "postcss-loader": "^6.2.1",
     "prettier": "^2.8.3",
     "ts-loader": "^9.4.2",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-loader": "^3.5.4",
     "typescript": "^4.9.4",
