add eslintignore and nvmrc

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mesto-ts",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "_babel.config.js",
   "scripts": {
     "build": "webpack --mode production",
