add splitChunks and babel polyfill

--- a/babel.config.json
+++ b/babel.config.json
@@ -4,7 +4,9 @@
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "modules": false,
+        "useBuiltIns": "usage",
+        "corejs": "3.27.2"
       }
     ]
   ]
